--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "react_app",
   "version": "0.1.0",
-  "homepage": "https://henry-zhang-exe.github.io/react-app",
+  "homepage": "https://henry-zhang-exe.github.io/singleH",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "fuse.js": "^7.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
